change spacing for nearby stops

--- a/apps/site/web/static/css/_page.scss
+++ b/apps/site/web/static/css/_page.scss
@@ -67,6 +67,7 @@
 
   .transit-input-label {
     color: $white;
+    margin-bottom: $base-spacing-sm;
 
     @include media-breakpoint-only(xs) {
       padding-top: $grid-gutter-width;
