--- a/apps/site/web/static/css/_transit-near-me.scss
+++ b/apps/site/web/static/css/_transit-near-me.scss
@@ -167,7 +167,7 @@
 
 .tnm-mode-links {
   color: $white;
-  margin-top: $grid-gutter-width / 2;
+  margin-top: $base-spacing-sm;
 
   a {
     color: $white;
